--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,9 +20,19 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 en: 
   error:
+    # General
     validation_error: "You have made some errors, please correct them and try again"
     bad_credentials: "The username and/or password is incorrect"
+    not_authenticated: "You are not logged in, or the session has expired. Please log in again"
+    not_authorized: "You are not authorized to access that resource"
+    parameter_missing: "A required parameter: `%{param}` is missing"
     
   success:
-    user_created: "User has been created"
+    # User
+    user_created: "You have successfully created an account. Welcome!"
+    user_destroyed: "You have successfully deleted your account"
+    user_updated: "Your profile has been updated"
+
+    # Session
     session_created: "You have been logged in"
+    session_destroyed: "You have been logged out"
