--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,6 +69,7 @@ en:
     # Drop
     media_key_length: "validation_media_key_length"
     media_key_unique: "validation_media_key_unique"
+    parent_id_missing: "validation_parent_id_missing"
 
     # Tag
     tag_string_format: "tag_string_format"
