--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,7 +72,7 @@ en:
 
     # Drop
     media_key_length: "validation_media_key_length"
-    media_key_unique: "validation_media_key_unique"
+    unique_key_exists: "validation_unique_key_exists"
     parent_id_missing: "validation_parent_id_missing"
     media_type_missing: "validation_media_type_missing"
 
