--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,5 +82,30 @@ en:
     tag_string_format: "tag_string_format"
     tag_bucket_type_invalid: "tag_bucket_type_invalid"
 
-    # Notification
+  notification:
     notification_message: "notification_message"
+
+    # Notifications
+    create_bucket: "%{username} has created a new shared bucket"
+    create_subscription: "%{username} is now subscribing to you"
+    create_drop_user_bucket: "%{username} has added a drop to his bucket"
+    create_drop_shared_bucket: 
+      "%{username} has added a drop to %{bucket_title}"
+    create_redrop: "%{username} has re-dropped your drop"
+    create_vote: 
+      "%{username} has set the temperature of your drop to %{temperature}"
+    create_tag_drop: "%{username} has tagged you in a drop"
+    create_tag_bucket: "%{username} has tagged you in %{bucket_title}"
+
+  #no:
+  #  notification:
+  #    # Notifications
+  #    create_bucket: "%{username} har laget en ny delt bucket"
+  #    create_subscription: "%{username} har startet a folge deg"
+  #    create_drop_user_bucket: "%{username} har lagt til en drop i sin bucket"
+  #    create_drop_shared_bucket: 
+  #      "%{username} har lagt til en drop i %{bucket_title}"
+  #    create_vote: 
+  #      "%{username} har satt temperaturen pa din drop til %{temperature}"
+  #    create_tag_drop: "%{username} har tagget deg i en drop" 
+  #    create_tag_bucket: "%{username} har tagget deg i %{bucket_title}"
