Performed various fixes - Self-referencing subscriptions are now controlled in the model - Tagging a user to a bucket will now destroy all watchers - You can no longer tag yourself to a bucket

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,6 +81,10 @@ en:
     # Tag
     tag_string_format: "tag_string_format"
     tag_bucket_type_invalid: "tag_bucket_type_invalid"
+    taggee_cant_be_owner: "taggee_cant_be_owner"
+
+    # Subscription
+    subscribee_cant_be_user: "subscribee_cant_be_user"
 
   notification:
     notification_message: "notification_message"
