--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,7 @@ en:
       "%{username} has set the temperature of your drop to %{temperature}"
     create_tag_drop: "%{username} has tagged you in a drop"
     create_tag_bucket: "%{username} has tagged you in %{bucket_title}"
+    create_chat_message: "%{username} has written something in %{bucket_title}"
 
   #no:
   #  notification:
