--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,7 +97,7 @@ en:
       "%{username} has added a drop to %{bucket_title}"
     create_redrop: "%{username} has re-dropped your drop"
     create_vote: 
-      "%{username} has cast the vote %{vote} on your drop"
+      "%{username} thinks your drop is %{vote}"
     create_tag_drop: "%{username} has tagged you in a drop"
     create_tag_bucket: "%{username} has tagged you in %{bucket_title}"
     create_chat_message: "%{username} has written something in %{bucket_title}"
